--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 body{
- background-color: rgb(148, 148, 148); /* your image file */
+   background-image: url('1.jpg'); /* your image file */
     background-repeat: repeat;            /* repeats horizontally and vertically */
     background-size: auto;                /* keeps original image size */
     background-position: top left;
@@ -42,7 +42,7 @@ nav ul li{
     font-weight: bold;
 }
 .songItem {
-    background-color: black;
+    background-color: rgb(0, 255, 255);
     color: red;
     padding: 10px;
     margin: 10px 0;
@@ -55,7 +55,7 @@ nav ul li{
 }
 
 .songInfo {
-    background-color: rgb(148, 148, 148);
+    background-color: rgb(89, 245, 89);
     color: rgb(0, 110, 255);
     padding: 5px;
     margin: 5px 0;
