--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 body{
-   background-image: url('1.jpg'); /* your image file */
+    background-color: rgb(139, 13, 151); /* your image file */
     background-repeat: repeat;            /* repeats horizontally and vertically */
     background-size: auto;                /* keeps original image size */
     background-position: top left;
@@ -24,7 +24,7 @@ nav ul{
     align-items: center;
     list-style-type: none;
     height: 65px;
-    background-color: rgb(244, 7, 7);
+    background-color: rgb(0, 0, 0);
     color: white;
 }
 
@@ -122,8 +122,8 @@ nav ul li{
     position: sticky;
     bottom: 0;
     height: 130px;
-    background-color: rgb(193, 234, 99);
-    color: rgb(185, 11, 254);
+   background-color: rgb(46, 21, 67);
+     color: rgb(238, 238, 238);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -151,7 +151,7 @@ nav ul li{
     display: flex;
     background-color: rgb(0, 0, 0);
     
-    color: rgb(239, 0, 0);
+ color: rgb(255, 255, 255);
     margin: 12px 0;
     justify-content: space-between;
     align-items: center;
